--- a/WebContent/cadastro-material.zul
+++ b/WebContent/cadastro-material.zul
@@ -15,7 +15,7 @@
 	
 	<groupbox width="300px">
 		<caption label="Tipo Material" />
-		<intbox id="tipoMaterial" placeholder="Tipo Material"/>
+		<combobox id="tipoMaterial" use="br.com.emprestimo.components.ComboboxTipo"/> 
 	</groupbox>
 		
 	<hbox>
